--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <br>
 
       <div class="text-center">
-        <a href="#"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> View Open vooms</button></a>
+        <a href="#"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> View Open Rooms</button></a>
         <a href="#"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservations</button></a>
       </div>
 
